# Dama-AI

./: Board.cpp  Board.h  Button.cpp  Button.h  CMakeLists.txt  Cell.cpp  Cell.h  Game.cpp  Game.h  MainWindow.cpp  MainWindow.h  Piece.cpp  Piece.h  README.md  Settings.cpp  Settings.h  Timer.h  main.cpp  resources.qrc
